# understanding

./: .gitignore  CHANGELOG.md  GITHUB_SETUP.md  INSTALLATION.md  PACKAGE_SUMMARY.md  QUICKSTART.md  README.md  USAGE_GUIDE.md  pyproject.toml  test_installation.sh
.github/workflows/: test.yml
docs/: ENERGY_TRANSFORMERS_RESEARCH.md  ENHANCED_METRICS_COMPLETE_REFERENCE.md  METRICS_OUTPUT_REFERENCE.md  METRICS_QUICK_REFERENCE.md  WEIGHTS_AND_GATES_JUSTIFICATION.md
src/understanding/: __init__.py  behavioral_metrics.py  cli.py  constraint_metrics.py  energy_metrics.py  enhanced_metrics.py  entity_metrics.py  normalized_metrics.py  requirements_metrics.py  semantic_metrics.py
tests/: __init__.py  conftest.py  test_cli.py
