[project]
name = "understanding"
version = "3.4.0"
description = "Requirements understanding and cognitive load metrics - scientifically-proven quality validation"
authors = [
    {name = "Ladislav Bihari", email = "ladislav.bihari@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["requirements", "understanding", "comprehension", "cognitive-load", "readability", "quality", "metrics", "validation", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.0.0",
]
diagram = [
    "graphviz>=0.20.0",
]
energy = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
]
all = [
    "spacy>=3.0.0",
    "graphviz>=0.20.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Testimonial/understanding"
Documentation = "https://github.com/Testimonial/understanding/blob/main/README.md"
Repository = "https://github.com/Testimonial/understanding"
Issues = "https://github.com/Testimonial/understanding/issues"

[project.scripts]
understanding = "understanding.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/understanding"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
