[project]
name = "understanding"
version = "3.5.0"
description = "31 requirements quality metrics based on readability formulas, IEEE/ISO standards, and RE research"
authors = [
    {name = "Ladislav Bihari", email = "ladislav.bihari@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["requirements", "understanding", "comprehension", "cognitive-load", "readability", "quality", "metrics", "validation", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "spacy>=3.0.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "graphviz>=0.20.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Testimonial/understanding"
Documentation = "https://github.com/Testimonial/understanding/blob/main/README.md"
Repository = "https://github.com/Testimonial/understanding"
Issues = "https://github.com/Testimonial/understanding/issues"

[project.scripts]
understanding = "understanding.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/understanding"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
